--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
 img {
-    width: 100%;
-  }
-  
+  width: 100%;
+}
+
+.container {
+  display: grid;
+  /*grid-template-columns: auto auto auto;*/
+  grid-template-columns: 150px 1fr 250px;
+  grid-gap: 8px;
+}
