--- a/style.css
+++ b/style.css
@@ -5,6 +5,6 @@ img {
 .container {
   display: grid;
   /*grid-template-columns: auto auto auto;*/
-  grid-template-columns: 150px 1fr 250px;
+  grid-template-columns: minmax(100px, 350px) 1fr minmax(100px, 350px);
   grid-gap: 8px;
 }
